cmake_minimum_required(VERSION 3.16)
project(et-crypto LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)

find_package(Qt5 REQUIRED COMPONENTS Widgets)

add_executable(et-crypto
    main.cpp
    mainwindow.cpp
    eecrypto.cpp
)

target_link_libraries(et-crypto Qt5::Widgets)
